
name:           hydrogen-lang
version:        0.3.0.0
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2014-2015 Karl Voelker
author:         Karl Voelker
maintainer:     hydrogen-lang@karlv.net
stability:      experimental
bug-reports:    mailto:hydrogen-lang@karlv.net
synopsis:       A language toolkit
category:       Language
tested-with:    GHC == 7.10.1

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base               >= 4   && < 5,
    containers         >= 0.5 && < 0.6,
    dlist              >= 0.7 && < 0.8,
    text               >= 1.2 && < 1.3,
    mtl                >= 2.2 && < 2.3,
    pretty             >= 1.1 && < 1.2,
    lens               >= 4.9 && < 4.10,
    system-filepath    >= 0.4 && < 0.5,
    regex-applicative  >= 0.3 && < 0.4,
    applicative-parsec >= 0.1 && < 0.2,
    hydrogen           >= 0.3 && < 0.4
  exposed-modules:
    He.Error
    He.Lexer
    He.Parser
    He.RefGraph
    He.Scope
  other-modules:
    He.Lexer.Tokens
    He.Lexer.Types
  default-extensions:
    -- Syntax
    TupleSections
    LambdaCase
    RecordWildCards
    NamedFieldPuns
    ViewPatterns
    -- Types
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    -- Deriving
    StandaloneDeriving
    GeneralizedNewtypeDeriving
    -- Other
    NoImplicitPrelude
  other-extensions:
    TemplateHaskell

